Fix html file. In previous version it did'nt load js file

--- a/frontend/templates/default.html
+++ b/frontend/templates/default.html
@@ -7,6 +7,7 @@
     <title>Reality Mismatch Developers Platform</title>
   </head>
   <body>
-    <script type="javascript" src="http://localhost:9000/bundle.js"></script>
+    <div id="app"></div>
+    <script src="http://localhost:9000/bundle.js"></script>
   </body>
 </html>
